--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-04HN5C65JE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-04HN5C65JE');
+    </script>
+
+    <!-- Amplitude -->
+    <script src="https://cdn.amplitude.com/script/52134993095870a48f834c2cea861e4f.js"></script>
+    <script>
+      window.amplitude.add(window.sessionReplay.plugin({ sampleRate: 1 }));
+      window.amplitude.init('52134993095870a48f834c2cea861e4f', {
+        fetchRemoteConfig: true,
+        autocapture: true
+      });
+    </script>
+
     <meta charset="UTF-8" />
-    <link rel="canonical" href="https://helixbridge.app">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-pwa-2 + TS</title>
+    <title>Bridge Stablecoins and Native Tokens on HelixBridge</title>
+    <meta name="description" content="Secure, fast, and low-cost cross-chain crypto transfers" />
+
+    <meta name="format-detection" content="telephone=no">
+    <link rel="canonical" href="https://helixbridge.app">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="HelixBridge Interface">
+    <meta property="og:url" content="https://helixbridge.app/">
+    <meta property="og:image" content="https://helixbridge.app/preview.png">
+    <meta property="og:image:alt" content="HelixBridge Interface">
+    <meta property="og:description" content="Secure, fast, and low-cost cross-chain crypto transfers.">
+
+    <meta property="twitter:title" content="HelixBridge Interface">
+    <meta property="twitter:image" content="https://helixbridge.app/preview.png">
+    <meta property="twitter:image:alt" content="HelixBridge Interface">
   </head>
   <body>
     <div id="root"></div>
